MDL-42682 theme_bootstrapbase: fixed forum search alignment
Conflicts:
	theme/bootstrapbase/less/moodle/modules.less
	theme/bootstrapbase/style/moodle.css

--- a/theme/bootstrapbase/less/moodle/modules.less
+++ b/theme/bootstrapbase/less/moodle/modules.less
@@ -9,6 +9,14 @@ select {
     width: auto;
 }
 
+// Forum
+.path-mod-forum .forumsearch {
+    input,
+    .helptooltip {
+        margin: 0 3px;
+    }
+}
+
 .path-mod-forum .forumheaderlist,
 .path-mod-forum .forumheaderlist td {
     border: none;
